# sqlstuff

./: .env  Cargo.toml  README.md  test.sqlite3  test.sqlite3-shm  test.sqlite3-wal
migrations/: 20220609130214_new_posts.sql
src/: lib.rs
