[package]
name = "sqlstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
